# ecom

./: .env  .env.dev  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  docker.sh  pyproject.toml  run.py  start.sh  start_flower.sh  start_worker.sh
config/: nginx.conf  redis.conf
src/api/: analytics.py  crawl_queue.py  export.py  logs.py  main.py  monitoring.py  products.py
src/crawlers/: base.py  playwright_base.py  ryans.py  startech.py
src/models/: examples.py  product.py
src/observability/: logging.py  tracing.py
src/storage/: csv_storage.py  incremental_storage.py  log_storage.py  parquet_storage.py
src/utils/: logging_config.py
src/workers/: celery_app.py  crawl_tasks.py  log_tasks.py
